--- a/scss/main/_footer.scss
+++ b/scss/main/_footer.scss
@@ -9,7 +9,7 @@ footer {
 
 .color-block {
     display: flex;
-    width: 20%;
+    // width: 20%;
     height: 20px;
     //border: 5px solid lighten($col-outlines, 15%);
     // background-color: $col-primary;
