--- a/scss/main/_layout.scss
+++ b/scss/main/_layout.scss
@@ -1,5 +1,5 @@
 body {
-    width: 100vw;
+    // width: 100vw;
     height: 100vh;
     padding: .5rem;
     background-color: $col-background;
